# igiari

./: CMakeLists.txt  README.md
src/: main.c  mdt.c  mdt.h  rlunicode.h
src/assets/fmod/: chunk.h  fsb.c  fsb.h  rebuild.c  rebuild.h  vorbis_headers.h
src/assets/pwaat/: mdt.c  mdt.h
src/assets/unity/: audio_clip.c  audio_clip.h  bundle.c  bundle.h  serialized_file.c  texture2d.c  texture2d.h
src/engine/: CMakeLists.txt  audio.c  audio.h  camera.c  camera.h  core.c  core.h  imgui.cpp  imgui.h  missing_texture.h  object.c  object.h  shader.c  shader.h  shapes.h  sprite.c  sprite.h  texture.c  texture.h  unicode.c  unicode.h
src/fmod/: fsb.c  fsb.h  rebuild.c  vorbis_headers.h
src/games/: effects.c  effects.h
src/games/shaders/: basic.c  basic.h  sprite.c  sprite.h
src/games/trilogy/: sound_data.c  sound_data.h  textbox.c  textbox.h
src/unity/: audio_clip.c  audio_clip.h  bundle.c  bundle.h  object.h  serialized_file.c  serialized_file.h  texture2d.c  texture2d.h
src/utils/: base64.c  base64.h  dxt1.c  dxt1.h  dxt5.c  dxt5.h  glad.c  glad.h  lz4.c  lz4.h  reader.c  reader.h  unicode.c  unicode.h
